--- a/LinuxTerminalEmulator/LinuxTerminalEmulator/LinuxTerminalEmulator.vbproj
+++ b/LinuxTerminalEmulator/LinuxTerminalEmulator/LinuxTerminalEmulator.vbproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="cd.vb" />
+    <Compile Include="ConsoleHelper.vb" />
     <Compile Include="echo.vb" />
     <Compile Include="ls.vb" />
     <Compile Include="TerminalEmulator.vb" />
