--- a/LinuxTerminalEmulator/LinuxTerminalEmulator/LinuxTerminalEmulator.vbproj
+++ b/LinuxTerminalEmulator/LinuxTerminalEmulator/LinuxTerminalEmulator.vbproj
@@ -46,6 +46,12 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>My_Logo.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -69,7 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="cd.vb" />
-    <Compile Include="ConsoleHelper.vb" />
+    <Compile Include="cls.vb" />
     <Compile Include="echo.vb" />
     <Compile Include="ls.vb" />
     <Compile Include="TerminalEmulator.vb" />
@@ -98,6 +104,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="My Project\app.manifest" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -108,6 +115,9 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="My_Logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
