Started ping command

--- a/LinuxTerminalEmulator/LinuxTerminalEmulator/LinuxTerminalEmulator.vbproj
+++ b/LinuxTerminalEmulator/LinuxTerminalEmulator/LinuxTerminalEmulator.vbproj
@@ -78,6 +78,7 @@
     <Compile Include="cls.vb" />
     <Compile Include="echo.vb" />
     <Compile Include="ls.vb" />
+    <Compile Include="ping.vb" />
     <Compile Include="TerminalEmulator.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
